5.add playTrack anim css

--- a/style.css
+++ b/style.css
@@ -120,3 +120,12 @@ select {
     border: none;
     outline:4px solid rgb(207, 242, 247);
 }
+
+@keyframes playTrack {
+    from {
+      transform: scale(1);
+    }
+    to {
+      transform: scale(1.2);
+    }
+  }
